# fediway

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  alembic.ini  celeryconfig.py  docker-compose.integration.yaml  fediway.toml.example  feedctl  pyproject.toml  requirements.txt  risingwave.toml  test.py
.config/: nextest.toml
.github/workflows/: build-push.yml  ci.yml  mastodon-integration.yml
app/: consumer.py  embed.py  main.py  offline_fs.py  pipeline.py  utils.py  worker.py
app/api/: items.py
app/core/: db.py  embed.py  feast.py  feed.py  fs.py  herde.py  lang.py  location.py  session.py
app/events/: __init__.py  account.py  base.py  follow.py  status.py  tag.py
app/features/: __init__.py  utils.py
app/services/: __init__.py  feed_service.py  seed_herde_service.py  status_features_service.py
app/settings/: __init__.py  base.py  development.py  production.py  test.py
app/stream/: embeddings.py
app/streaming/: embeddings.py  features.py
app/tasks/: __init__.py
app/utils/: __init__.py  db.py
apps/api/: main.py
apps/cli/: Cargo.toml  app.py  dataset.py  feast.py  herde.py  kafka.py  kirby.py  orbit.py  qdrant.py  risingwave.py  schwarm.py  train.py
apps/cli/source/: __init__.py  accounts.py  follows.py  statuses.py  tags.py
apps/cli/source/follows/: __init__.py  triangular_loop.py
apps/cli/src/: main.rs  provider.rs
apps/embedding/: main.py
apps/orbit/: Cargo.toml  Dockerfile  test.py
apps/orbit/src/: communities.rs  config.rs  db.rs  debezium.rs  embedding.rs  embeddings.rs  init.rs  kafka.rs  main.rs  models.rs  orbit.rs  qdrant.rs  rw.rs  sparse.rs  state.rs  types.rs  utils.rs
apps/orbit/src/algo/: mod.rs  weighted_louvain.rs
apps/orbit/src/entities/: consumer.rs  mod.rs  producer.rs  status.rs  tag.rs
apps/orbit/src/services/: compute_communities.rs  compute_initial_embeddings.rs  mod.rs
apps/orbit/src/workers/: embedding.rs  kafka.rs  mod.rs  qdrant.rs  status_purge.rs
apps/server/: Cargo.toml
apps/server/src/: auth.rs  commonfeed.rs  language.rs  lib.rs  main.rs  middleware.rs  observe.rs  state.rs
apps/server/src/feeds/: engine.rs  home.rs  link_timeline.rs  mod.rs  seen.rs  tag_timeline.rs  timeline_feed.rs  trend_feed.rs  trending_links.rs  trending_statuses.rs  trending_tags.rs
apps/server/src/mastodon/: forward.rs  mod.rs  resolve.rs  statuses.rs  translate.rs
apps/server/src/middleware/: mastodon_fallback.rs  mod.rs
apps/server/src/routes/: mod.rs
apps/server/src/routes/commonfeed/: callback.rs  mod.rs  verify.rs
apps/server/src/routes/fediway/: health.rs  mod.rs
apps/server/src/routes/mastodon/: create_report.rs  create_status.rs  engagements.rs  error.rs  extract.rs  home.rs  mod.rs  statuses.rs  suggestions.rs  timelines.rs  trends.rs
apps/server/tests/: auth.rs  cors.rs  engagements.rs  forward_host.rs  health.rs  home_feed.rs  hydrate.rs  mastodon_fallback.rs  mastodon_integration.rs  mastodon_tag_source.rs  network_source.rs  providers.rs  resolver.rs  status_view.rs  statuses.rs  timelines_tag.rs  to_statuses.rs  translate.rs  trends.rs
apps/server/tests/common/: mastodon.rs  mod.rs
apps/streaming/: main.py  utils.py
apps/worker/: Cargo.toml  config.py  main.py
apps/worker/src/: main.rs
apps/worker/tasks/: schwarm.py  sources.py
config/: __init__.py  api.py  app.py  base.py  cors.py  db.py  embed.py  feast.py  fediway.py  feed.py  files.py  geo.py  kafka.py  logging.py  postgres.py  qdrant.py  redis.py  risingwave.py  session.py  sources.py  tasks.py
config/algorithm/: __init__.py  loader.py  schema.py
config/feeds/: __init__.py  loader.py  schema.py
crates/common/: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: db.rs  instance.rs  lib.rs  metrics.rs  orbit.rs  redis.rs  tei.rs  tests.rs
crates/feed/: Cargo.toml  README.md
crates/feed/src/: candidate.rs  cursor.rs  feed.rs  filter.rs  lib.rs  observe.rs  pipeline.rs  quota_sampler.rs  sampler.rs  scorer.rs  source.rs  tests.rs
crates/mastodon/: Cargo.toml
crates/pipeline/: Cargo.toml  README.md
crates/sources/: Cargo.toml
crates/sources/src/: lib.rs  observe.rs
crates/sources/src/commonfeed/: links.rs  mod.rs  posts.rs  recommended.rs  tags.rs  types.rs
crates/sources/src/mastodon/: cached_post.rs  feed_item.rs  mod.rs  network.rs  paperclip.rs  policy_filter.rs  posts.rs  row.rs
crates/state/: Cargo.toml
crates/state/src/: cache.rs  db.rs  error.rs  feed_store.rs  lib.rs  orbit.rs  policy.rs  providers.rs  redis.rs  statuses.rs
crates/state/src/migrations/: 000_timestamp_id.sql  001_commonfeed_providers.sql  002_commonfeed_sources.sql  003_orbit.sql  004_commonfeed_statuses.sql  005_commonfeed_statuses_mastodon_id.sql  006_commonfeed_sources_composite_pk.sql
crates/state/src/providers/: mod.rs
crates/state/src/providers/detail/: fetch.rs  mod.rs
crates/state/src/providers/publish/: mod.rs
crates/state/src/providers/sources/: fetch.rs  mod.rs  row.rs  sql.rs
crates/state/src/statuses/: mapping.rs  mod.rs  view.rs
crates/state/src/statuses/detail/: fetch.rs  mod.rs  row.rs  sql.rs
crates/state/tests/: orbit_fresh.rs  providers.rs  status_view.rs
crates/state/tests/common/: mod.rs
crates/test_support/: Cargo.toml
docker/: mastodon-bootstrap.sh  mastodon.env
features/: __init__.py  data_sources.py  entities.py  feature_services.py  feature_store.yaml  feature_views.py  features.py  services.py  utils.py
features/offline_fs/: __init__.py
features/services/: kirby.py  ranker.py
features/views/: account_author_engagement_features.py  account_domain_engagement_features.py  account_engagement_features.py  account_status.py  account_tag_engagement_features.py  combined_status_tags.py  (+7 more)
jobs/: app.py  main.py  process_status_nli.py  settings.py  utils.py
migrations/: 20260308000000_commonfeed_providers.down.sql  20260308000000_commonfeed_providers.up.sql  env.py
tests/: conftest.py
workers/orbit/: Cargo.toml
workers/orbit/src/: embed.rs  engagement.rs  main.rs  poll.rs  tei.rs  vector.rs
workers/orbit/templates/: embedding.j2
(+648 files in other folders)
