[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "feedctl"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
config.workspace = true
state.workspace = true
reqwest.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
