[package]
name = "orbit"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
dotenvy = "0.15"
envy = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
linked-hash-map = "0.5"
petgraph = "0.8"
qdrant-client = "1.14.0"
rand = "0.9.1"
itertools = "0.14.0"
nalgebra-sparse = "0.10.0"
sprs = "0.11.3"
