[package]
name = "orbit"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
dotenvy = "0.15"
envy = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
petgraph = "0.8"
qdrant-client = "1.16.0"
rand = "0.9.1"
itertools = "0.14.0"
nalgebra-sparse = "0.10.0"
sprs = "0.11.3"
rustc-hash = { version = "2.1", default-features = false }
dashmap = "6.1.0"
ahash = "0.8.12"
rdkafka = "0.37.0"
redis = "0.32.2"
