[package]
name = "server"
version.workspace = true
edition.workspace = true

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "fediway"
path = "src/main.rs"

[dev-dependencies]
http-body-util = "0.1"

[lints]
workspace = true

[dependencies]
common.workspace = true
clap.workspace = true
config.workspace = true
state.workspace = true
feed.workspace = true
sources.workspace = true
mastodon.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dotenvy.workspace = true
anyhow.workspace = true
metrics.workspace = true
tikv-jemallocator = "0.6"
