[package]
name = "worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fediway-worker"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
common.workspace = true
state.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time"] }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
