[package]
name = "feed"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
metrics.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
