[package]
name = "sources"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
common.workspace = true
pipeline.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
