[package]
name = "sources"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
common.workspace = true
feed.workspace = true
state.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["chrono"] }
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
metrics.workspace = true
