[package]
name = "state"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
common.workspace = true
config.workspace = true
chrono.workspace = true
sqlx = { workspace = true, features = ["json", "chrono"] }
serde_json.workspace = true
redis.workspace = true
thiserror.workspace = true
tracing.workspace = true
