[package]
name = "orbit"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fediway-orbit"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
common.workspace = true
config.workspace = true
state.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time"] }
reqwest = { workspace = true }
sqlx = { workspace = true, features = ["chrono"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
metrics.workspace = true
minijinja = "2"
